--- a/topic7.html
+++ b/topic7.html
@@ -39,3 +39,9 @@ if(typeof(LDAvis) !== "undefined"){
          });
 }
 </script>
+
+git add --all
+
+git commit -m "Initial commit"
+
+git push -u origin master
